--- a/styles/index.css
+++ b/styles/index.css
@@ -1,194 +1,190 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Nunito', sans-serif;
-    background: linear-gradient(to right, #f8f8f8 50%, #E5E5E5 50%);
-    color: #000000;
+  font-family: "Nunito", sans-serif;
+  background: linear-gradient(to right, #efd5d5 50%, #b2b1b1 50%);
+  color: #000000;
 }
 
 .home-work-logo {
-    text-align: center;
-    padding-top: 27px;
+  text-align: center;
+  padding-top: 27px;
 }
 
 .home-work-logo h1 {
-    font-weight: 900;
-    font-size: 36px;
-    line-height: 49px;
-    letter-spacing: -0.015em;
-    text-transform: uppercase;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 49px;
+  letter-spacing: -0.015em;
+  text-transform: uppercase;
 }
 
 .home-work-logo h1 span {
-    color: #D72F3F;
-    font-size: 44px;
+  color: #d72f3f;
+  font-size: 44px;
 }
 
 .main {
-    display: flex;
-    padding: 112px 0 191px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  padding: 112px 0 191px;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-info {
-    max-width: 496px;
+  max-width: 496px;
 }
 
 .main-info-title h2 {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 49px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 49px;
 }
 
 .main-info-desc {
-    padding-top: 7px;
+  padding-top: 7px;
 }
 
 .main-info-desc p {
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 27px;
-    color: #636363;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 27px;
+  color: #636363;
 }
 
 .main-info-form {
-    padding-top: 42px;
+  padding-top: 42px;
 }
 
 .main-info-form {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
 }
 
 .main-info-form label {
-    display: flex;
-    flex-direction: column;
-    row-gap: 5px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 27px;
-    color: #C6C6C4;
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 27px;
+  color: #c6c6c4;
 }
 
 .main-info-form-input {
-    border: none;
-    border-bottom: 1px solid #C6C6C4;
-    max-width: 452px;
-    background: #f8f8f8;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 27px;
-    color: #323232;
-
-
+  border: none;
+  border-bottom: 1px solid #c6c6c4;
+  max-width: 452px;
+  background: #f8f8f8;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  color: #323232;
 }
 
 .main-info-check {
-    padding-top: 30px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 27px;
-    color: #636363;
-    display: flex;
-    column-gap: 10px;
+  padding-top: 30px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 27px;
+  color: #636363;
+  display: flex;
+  column-gap: 10px;
 }
 
 .main-info-btn {
-    padding-top: 40px;
-    text-align: center;
+  padding-top: 40px;
+  text-align: center;
 }
 
 .main-info-btn button {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
-    color: #FFFFFF;
-    background: #DD3142;
-    border-radius: 40px;
-    padding: 21px 68px 25px;
-    border: none;
-    cursor: pointer;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+  background: #dd3142;
+  border-radius: 40px;
+  padding: 21px 68px 25px;
+  border: none;
+  cursor: pointer;
 }
 
 .main-info-link {
-    padding-top: 44px;
-    text-align: center;
+  padding-top: 44px;
+  text-align: center;
 }
 
 .main-info-link a {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 27px;
-    color: #636363;
-    text-decoration: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 27px;
+  color: #636363;
+  text-decoration: none;
 }
 
 .main-info-form-input::placeholder {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 27px;
-    color: #323232;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  color: #323232;
 }
 
 .popup {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #0000005c;
-    opacity: 0;
-    transition: all .3s ease;
-    visibility: hidden;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0000005c;
+  opacity: 0;
+  transition: all 0.3s ease;
+  visibility: hidden;
 }
 
 .popup-opened {
-    display: flex;
-    opacity: 1;
-    visibility: visible;
+  display: flex;
+  opacity: 1;
+  visibility: visible;
 }
 
 .popup-container {
-    display: flex;
-    width: 500px;
-    height: 270px;
-    border-radius: 20px;
-    background: #e5e5e5;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 200px auto 0;
+  display: flex;
+  width: 500px;
+  height: 270px;
+  border-radius: 20px;
+  background: #e5e5e5;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 200px auto 0;
 }
 
 .popup-btn {
-    padding-top: 20px;
-
+  padding-top: 20px;
 }
 
 .popup-btn button {
-    padding: 15px;
-    border-radius: 20px;
-    background: rgb(221, 49, 66);
-    color: white;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-    width: 150px;
-
+  padding: 15px;
+  border-radius: 20px;
+  background: rgb(221, 49, 66);
+  color: white;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  width: 150px;
 }
 
 .popup-text p {
-    font-size: 25px;
-    line-height: 1.5;
-    max-width: 500px;
+  font-size: 25px;
+  line-height: 1.5;
+  max-width: 500px;
 }
